--- a/package.json
+++ b/package.json
@@ -15,11 +15,24 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@babel/core": "7.11.0",
+    "@babel/eslint-parser": "^7.15.8",
+    "@types/node": "^16.11.1",
+    "acorn": "^8",
+    "babel-eslint": "^10.0.0",
     "babel-plugin-styled-components": "^1.13.3",
+    "eslint": "7.5.0",
     "gatsby": "^3.14.2",
+    "gatsby-plugin-react-head": "^1.1.0",
     "gatsby-plugin-styled-components": "^4.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "styled-components": "^5.3.1"
+    "react-head": "^3.4.0",
+    "react-is": "16.8.0",
+    "styled-components": "^5.3.1",
+    "typescript": "^4.5.0-dev.20211019"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.15"
   }
 }
