--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "preload-fonts": "gatsby-preload-fonts"
   },
   "dependencies": {
     "@babel/core": "7.11.0",
@@ -23,6 +24,7 @@
     "babel-plugin-styled-components": "^1.13.3",
     "eslint": "7.5.0",
     "gatsby": "^3.14.2",
+    "gatsby-plugin-preload-fonts": "^2.14.0",
     "gatsby-plugin-react-head": "^1.1.0",
     "gatsby-plugin-styled-components": "^4.14.0",
     "react": "^17.0.1",
