--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "gatsby": "^3.14.2",
     "gatsby-plugin-preload-fonts": "^2.14.0",
     "gatsby-plugin-react-head": "^1.1.0",
+    "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-styled-components": "^4.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-head": "^3.4.0",
+    "react-helmet": "^6.1.0",
     "react-is": "16.8.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.5.0-dev.20211019"
