--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "babel-plugin-styled-components": "^1.13.3",
     "eslint": "7.5.0",
     "gatsby": "^3.14.2",
-    "gatsby-plugin-preload-fonts": "^2.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-styled-components": "^4.14.0",
+    "gatsby-plugin-webfonts": "^2.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-head": "^3.4.0",
