--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "gatsby": "^3.14.2",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-styled-components": "^4.14.0",
+    "gatsby-plugin-zopfli": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-head": "^3.4.0",
     "react-helmet": "^6.1.0",
     "react-is": "16.8.0",
     "styled-components": "^5.3.1",
-    "typescript": "^4.5.0-dev.20211019"
+    "typescript": "^4.5.0-dev.20211019",
+    "webpack": "^5.1.0"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.15"
