--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@babel/core": "7.11.0",
     "@babel/eslint-parser": "^7.15.8",
+    "@svgr/webpack": "^5.5.0",
     "@types/node": "^16.11.1",
     "acorn": "^8",
     "babel-eslint": "^10.0.0",
@@ -26,6 +27,7 @@
     "gatsby": "^3.14.2",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-styled-components": "^4.14.0",
+    "gatsby-plugin-svgr": "^3.0.0-beta.0",
     "gatsby-plugin-zopfli": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
