--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
       "src/**/*.ts",
       "src/**/*.tsx",
       "src/**/*.d.ts"
-, "fonts.d.ts", "src/styles/fonts.js"    ]
+, "fonts.d.ts", "src/styles/fonts.js", "svg.d.ts"    ]
   }
   
